<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"
            android:src="@drawable/ic_moviedb_logo_square"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/by_mail"
            android:padding="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:padding="5dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:padding="5dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:boxStrokeWidth="1dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/logged_in"
            android:padding="5dp"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnNoLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="Continued without Login"
            android:textSize="14sp"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>