<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.main_screen.MainActivity">

    <LinearLayout
        android:id="@+id/linearNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_network_xml"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/no_connection"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_margin="15dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:gravity="center|start"
                            android:text="@string/welcome_to_movie_db"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:gravity="center|start"
                            android:text="@string/subtitle"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_tmdb_logo"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/framePopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/popular_title"
                            android:gravity="center|start"
                            android:drawableStart="@drawable/ic_tv_xml"
                            android:drawablePadding="10dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLoadMorePopular"
                            android:layout_width="wrap_content"
                            android:text="@string/view_more"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="5dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:drawableEnd="@drawable/ic_arrow_forward_xml" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvErrorPopular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_connection"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:drawableTop="@drawable/ic_no_connection_xml"
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"/>

                        <ProgressBar
                            android:id="@+id/progressBarPopular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:layout_gravity="center" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvPopularList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frameTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center|start"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_stars_xml"
                            android:drawablePadding="10dp"
                            android:text="@string/top_rated"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLoadMoreTopR"
                            android:layout_width="wrap_content"
                            android:text="@string/view_more"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="5dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:drawableEnd="@drawable/ic_arrow_forward_xml" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvErrorTopR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_connection"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:drawableTop="@drawable/ic_no_connection_xml"
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"/>

                        <ProgressBar
                            android:id="@+id/progressBarTopR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvTopRatedList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frameUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center|start"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_access_time_xml"
                            android:drawablePadding="10dp"
                            android:text="@string/upcoming_movies"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLoadMoreUpcoming"
                            android:layout_width="wrap_content"
                            android:text="@string/view_more"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="5dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:drawableEnd="@drawable/ic_arrow_forward_xml" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvErrorUpcoming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_connection"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:drawableTop="@drawable/ic_no_connection_xml"
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"/>

                        <ProgressBar
                            android:id="@+id/progressBarUpcoming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvUpcomingList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>